--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,12 +8,13 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 購入機能実装後に確認 %>
-      <% if buyer_id =! '' %>
+    
+    <%#soldout 表示分岐 %>
+    <% if @item.buyer.present? %>
         <div class="sold-out">
           <span>Sold Out!!</span>
         </div>
-      <% end %>
+    <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -26,16 +27,17 @@
 
     <% if user_signed_in? %>
       <% if current_user.id == @item.user_id %>
-        <%# 商品購入実装後に確認する %>
-        <%# if buyer_id == '' %>
+      <%# 商品購入時非表示分岐 %>
+        <% if @item.buyer.blank? %>
           <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
           <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-        <%# end %>
-      <% else %>
-        <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+        <% end %>
+      <% elsif @item.buyer.blank? %>
+        <%= link_to "購入画面に進む", item_buyers_path(@item.id), class:"item-red-btn"%>
       <% end %>
     <% end %>
+    
 
     <div class="item-explain-box">
       <span><%= @item.comment %></span>
