コードの修正及びテスト項目の追加

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,20 +25,17 @@
       </span>
     </div>
 
-    <% if user_signed_in? %>
+    <%# 商品購入時非表示分岐 %>
+    <% if user_signed_in? && @item.buyer.blank? %>
       <% if current_user.id == @item.user_id %>
-      <%# 商品購入時非表示分岐 %>
-        <% if @item.buyer.blank? %>
-          <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+        <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
-          <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-        <% end %>
-      <% elsif @item.buyer.blank? %>
+        <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
+      <% else %>
         <%= link_to "購入画面に進む", item_buyers_path(@item.id), class:"item-red-btn"%>
       <% end %>
     <% end %>
     
-
     <div class="item-explain-box">
       <span><%= @item.comment %></span>
     </div>
