--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,13 +132,11 @@
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
             <%#soldout 表示分岐 %>
-            <% @buyer.each do |buyer| %>
-              <% if buyer.item_id == item.id %>
+              <% if item.buyer.present? %>
                 <div class='sold-out'>
                   <span>Sold Out!!</span>
                 </div>
               <% end %>
-            <% end %>
           </div>
               <div class='item-info'>
                 <h3 class='item-name'>
